# SGA

./: Base de données.txt  Cargo.toml  Description des fichiers et dossier.txt  curl.txt  gui.txt  liaison.txt  project_monitoring.txt  resources.txt
src/: main.rs  schema.rs
src/api/: dbconnect.rs  intermediary.rs  mod.rs  projet.rs  proto.rs  utilisateur.rs
src/models/: commentaire.rs  logs_activites.rs  logs_activities.rs  mod.rs  projet.rs  projet_additionnal.rs  projet_revamped.rs  utilisateur.rs
