[package]
name = "sga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.19.9"
serde = {version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7.4"
tokio =  { version = "1.35.1", features = ["full", "macros", "rt-multi-thread"] }
actix-web= "4.0"
