[package]
name = "sga"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = { version = "0.19.9"}
serde = {version = "1.0", features = ["derive"]}
chrono = { version = "0.4", features = ["serde"] }
axum = "0.7.4"
tokio =  { version = "1.35.1", features = ["full", "macros", "rt-multi-thread"] }
actix-web= "4.8.0"
cc = "1.0"
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
dotenvy = "0.15"
diesel = { version = "2.1.0", features = ["postgres", "r2d2", "chrono"] }



